--- a/front/src/index.css
+++ b/front/src/index.css
@@ -3,38 +3,99 @@ body {
 
 }
 #main-container {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  background-color: #f5fcff;
+}
+.container {
   max-width: 1400px;
   margin: auto;
+  flex-grow: 1;
+  padding: 10px;
+}
+a {
+  color: black;
+  text-decoration: none;
+}
+.showhide {
+  background-color: #fff;
+  width: 110px;
+  height: 25px;
+  border-radius: 25px;
+  border: 1 solid #444;
+}
+.showhide:hover {
+  background-color: #444;
+  color: white;
+}
+.showhide:active, :focus {
+  background-color: #444;
+  color: white;
 }
 
 .navi {
+  background-color: #444;
   display: flex;
+  align-items: center;
+  height: 71px;
+  padding: auto;
+  justify-content: space-around;
+}
+.navi a {
+  border-radius: 25px;
+  display: inline-block;
+  text-align: center;
+  color: white;
+  text-transform: uppercase;
+  width: 150px;
+  transition: 0.3s;
+}
+.navi a:hover {
+  background-color: white;
+  color: black;
 }
 .flex-container {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  gap: 12px;
+  align-items: flex-start;
+  gap: 30px;
+  transition: 0.4s;
 }
 .flex-card {
+  background-color: #fff;
   width: 33%;
   flex: 1 1 30%;
   border: solid grey 1px;
+  padding: 10px;
+  align-items: flex-start;
   transition: 0.4s;
-  padding: 0 12px 12px 12px;
 }
 .flex-card>h1,h2,h3,h4,h5,h6 {
   margin: 10px 0;
 }
 
-.repoInfo {
-  height: auto;
+.card-header {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  color: #000;
+  border-bottom: solid 1px grey;
+}
+
+.repo-info {
+  height: 300px;
+  min-height: 0;
+  opacity: 1;
   transition: 0.4s;
 }
 .hidden {
   height: 0;
+  opacity: 0;
   overflow: hidden;
-  transition: 0.4s;
+  
 }
 .repoLink {
   display: block;
@@ -49,4 +110,33 @@ body {
 }
 .repoLink:active, :focus {
   color:orange;
+}
+.footer {
+  background-color: #444;
+  height: 150px;
+  width: 100%;
+}
+
+@media (max-width: 700px) {
+  #main-container {
+    height: 100vh;
+  }
+  .navi {
+    position: fixed;
+    width: 100%;
+    top: 0;
+  }
+  .container {
+    margin-top: 71px;
+    
+  }
+  .flex-card {
+    width: 95%;
+    flex: 1 100%;
+    padding: 0 12px;
+  }
+  .footer {
+    height: 100px;
+  }
+  
 }
