removed unnecesarry files from react app, added comments and  hardcoded skills to backend

--- a/front/src/index.css
+++ b/front/src/index.css
@@ -130,9 +130,14 @@ a {
   height: 150px;
   width: 100%;
 }
+.left {
+  display: inline-block;
+  width: 30%;
+  padding: 25px;
+}
 .center {
   display: inline-block;
-  width: 40%;
+  width: 30%;
   padding: 25px;
 }
 
